include/El/lapack_like/factor.h

/* Cholesky
   ======== */

/* Cholesky without pivoting, A = L L^H = U^H U
   ------------------------------------------------- */
EL_EXPORT ElError ElCholesky_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElCholesky_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElCholesky_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElCholesky_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElCholeskyDist_s( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElCholeskyDist_d( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElCholeskyDist_c( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElCholeskyDist_z( ElUpperOrLower uplo, ElDistMatrix_z A );
/* Solve linear systems after factorization
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElSolveAfterCholesky_s
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterCholesky_d
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterCholesky_c
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElSolveAfterCholesky_z
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElSolveAfterCholeskyDist_s
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterCholeskyDist_d
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterCholeskyDist_c
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElSolveAfterCholeskyDist_z
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_z A, ElDistMatrix_z B );
/* Cholesky with full (diagonal) pivoting, P A P^T = L L^H = U^H U
   --------------------------------------------------------------- */
EL_EXPORT ElError ElCholeskyPiv_s
( ElUpperOrLower uplo, ElMatrix_s A, ElPermutation p );
EL_EXPORT ElError ElCholeskyPiv_d
( ElUpperOrLower uplo, ElMatrix_d A, ElPermutation p );
EL_EXPORT ElError ElCholeskyPiv_c
( ElUpperOrLower uplo, ElMatrix_c A, ElPermutation p );
EL_EXPORT ElError ElCholeskyPiv_z
( ElUpperOrLower uplo, ElMatrix_z A, ElPermutation p );
EL_EXPORT ElError ElCholeskyPivDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElDistPermutation p );
EL_EXPORT ElError ElCholeskyPivDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElDistPermutation p );
EL_EXPORT ElError ElCholeskyPivDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElDistPermutation p );
EL_EXPORT ElError ElCholeskyPivDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElDistPermutation p );
/* Solve linear systems after factorization 
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElSolveAfterCholeskyPiv_s
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_s A, ElConstPermutation p, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterCholeskyPiv_d
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_d A, ElConstPermutation p, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterCholeskyPiv_c
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_c A, ElConstPermutation p, ElMatrix_c B );
EL_EXPORT ElError ElSolveAfterCholeskyPiv_z
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstMatrix_z A, ElConstPermutation p, ElMatrix_z B );
EL_EXPORT ElError ElSolveAfterCholeskyPivDist_s
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_s A, ElConstDistPermutation p, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterCholeskyPivDist_d
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_d A, ElConstDistPermutation p, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterCholeskyPivDist_c
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_c A, ElConstDistPermutation p, ElDistMatrix_c B );
EL_EXPORT ElError ElSolveAfterCholeskyPivDist_z
( ElUpperOrLower uplo, ElOrientation orientation,
  ElConstDistMatrix_z A, ElConstDistPermutation p, ElDistMatrix_z B );
/* Modify a Cholesky factorization, L L^H + alpha V V^H = LHat LHat^H
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElCholeskyMod_s
( ElUpperOrLower uplo, ElMatrix_s T, float alpha, ElMatrix_s V );
EL_EXPORT ElError ElCholeskyMod_d
( ElUpperOrLower uplo, ElMatrix_d T, double alpha, ElMatrix_d V );
EL_EXPORT ElError ElCholeskyMod_c
( ElUpperOrLower uplo, ElMatrix_c T, float alpha, ElMatrix_c V );
EL_EXPORT ElError ElCholeskyMod_z
( ElUpperOrLower uplo, ElMatrix_z T, double alpha, ElMatrix_z V );
EL_EXPORT ElError ElCholeskyModDist_s
( ElUpperOrLower uplo, ElDistMatrix_s T, float alpha, ElDistMatrix_s V );
EL_EXPORT ElError ElCholeskyModDist_d
( ElUpperOrLower uplo, ElDistMatrix_d T, double alpha, ElDistMatrix_d V );
EL_EXPORT ElError ElCholeskyModDist_c
( ElUpperOrLower uplo, ElDistMatrix_c T, float alpha, ElDistMatrix_c V );
EL_EXPORT ElError ElCholeskyModDist_z
( ElUpperOrLower uplo, ElDistMatrix_z T, double alpha, ElDistMatrix_z V );
/* Compute the Cholesky factorization of a possibly singular matrix
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElHPSDCholesky_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHPSDCholesky_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHPSDCholesky_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHPSDCholesky_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHPSDCholeskyDist_s( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHPSDCholeskyDist_d( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHPSDCholeskyDist_c( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHPSDCholeskyDist_z( ElUpperOrLower uplo, ElDistMatrix_z A );
/* LDL factorization
   ================= */

typedef enum
{
  EL_BUNCH_KAUFMAN_A,
  EL_BUNCH_KAUFMAN_C,
  EL_BUNCH_KAUFMAN_D,
  EL_BUNCH_KAUFMAN_BOUNDED,
  EL_BUNCH_PARLETT,
  LDL_WITHOUT_PIVOTING
  /* TODO: Diagonal pivoting? */
} ElLDLPivotType;