include/El/lapack_like/factor.py

#
#  Copyright (c) 2009-2014, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from ..core import *
import ctypes

# Cholesky factorization
# ======================
lib.ElCholesky_s.argtypes = [c_uint,c_void_p]
lib.ElCholesky_s.restype = c_uint
lib.ElCholesky_d.argtypes = [c_uint,c_void_p]
lib.ElCholesky_d.restype = c_uint
lib.ElCholesky_c.argtypes = [c_uint,c_void_p]
lib.ElCholesky_c.restype = c_uint
lib.ElCholesky_z.argtypes = [c_uint,c_void_p]
lib.ElCholesky_z.restype = c_uint
lib.ElCholeskyDist_s.argtypes = [c_uint,c_void_p]
lib.ElCholeskyDist_s.restype = c_uint
lib.ElCholeskyDist_d.argtypes = [c_uint,c_void_p]
lib.ElCholeskyDist_d.restype = c_uint
lib.ElCholeskyDist_c.argtypes = [c_uint,c_void_p]
lib.ElCholeskyDist_c.restype = c_uint
lib.ElCholeskyDist_z.argtypes = [c_uint,c_void_p]
lib.ElCholeskyDist_z.restype = c_uint
lib.ElCholeskyPiv_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPiv_s.restype = c_uint
lib.ElCholeskyPiv_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPiv_d.restype = c_uint
lib.ElCholeskyPiv_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPiv_c.restype = c_uint
lib.ElCholeskyPiv_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPiv_z.restype = c_uint
lib.ElCholeskyPivDist_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPivDist_s.restype = c_uint
lib.ElCholeskyPivDist_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPivDist_d.restype = c_uint
lib.ElCholeskyPivDist_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPivDist_c.restype = c_uint
lib.ElCholeskyPivDist_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElCholeskyPivDist_z.restype = c_uint

def Cholesky(uplo,A,piv=False):
  if type(A) is Matrix:
    if piv:
      p = Matrix(iTag)
      if   A.tag == sTag: lib.ElCholeskyPiv_s(uplo,A.obj,p.obj)
      elif A.tag == dTag: lib.ElCholeskyPiv_d(uplo,A.obj,p.obj)
      elif A.tag == cTag: lib.ElCholeskyPiv_c(uplo,A.obj,p.obj)
      elif A.tag == zTag: lib.ElCholeskyPiv_z(uplo,A.obj,p.obj)
      else: raise Exception('Unsupported datatype')
      return p
    else:
      if   A.tag == sTag: lib.ElCholesky_s(uplo,A.obj)
      elif A.tag == dTag: lib.ElCholesky_d(uplo,A.obj)
      elif A.tag == cTag: lib.ElCholesky_c(uplo,A.obj)
      elif A.tag == zTag: lib.ElCholesky_z(uplo,A.obj)
      else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if piv:
      p = DistMatrix(iTag,VC,STAR,A.Grid())
      if   A.tag == sTag: lib.ElCholeskyPivDist_s(uplo,A.obj,p.obj)
      elif A.tag == dTag: lib.ElCholeskyPivDist_d(uplo,A.obj,p.obj)
      elif A.tag == cTag: lib.ElCholeskyPivDist_c(uplo,A.obj,p.obj)
      elif A.tag == zTag: lib.ElCholeskyPivDist_z(uplo,A.obj,p.obj)
      else: raise Exception('Unsupported datatype')
      return p
    else:
      if   A.tag == sTag: lib.ElCholeskyDist_s(uplo,A.obj)
      elif A.tag == dTag: lib.ElCholeskyDist_d(uplo,A.obj)
      elif A.tag == cTag: lib.ElCholeskyDist_c(uplo,A.obj)
      elif A.tag == zTag: lib.ElCholeskyDist_z(uplo,A.obj)
      else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElCholeskyMod_s.argtypes = [c_uint,c_void_p,sType,c_void_p]
lib.ElCholeskyMod_s.restype = c_uint
lib.ElCholeskyMod_d.argtypes = [c_uint,c_void_p,dType,c_void_p]
lib.ElCholeskyMod_d.restype = c_uint
lib.ElCholeskyMod_c.argtypes = [c_uint,c_void_p,sType,c_void_p]
lib.ElCholeskyMod_c.restype = c_uint
lib.ElCholeskyMod_z.argtypes = [c_uint,c_void_p,dType,c_void_p]
lib.ElCholeskyMod_z.restype = c_uint
lib.ElCholeskyModDist_s.argtypes = [c_uint,c_void_p,sType,c_void_p]
lib.ElCholeskyModDist_s.restype = c_uint
lib.ElCholeskyModDist_d.argtypes = [c_uint,c_void_p,dType,c_void_p]
lib.ElCholeskyModDist_d.restype = c_uint
lib.ElCholeskyModDist_c.argtypes = [c_uint,c_void_p,sType,c_void_p]
lib.ElCholeskyModDist_c.restype = c_uint
lib.ElCholeskyModDist_z.argtypes = [c_uint,c_void_p,dType,c_void_p]
lib.ElCholeskyModDist_z.restype = c_uint
def CholeskyMod(uplo,T,alpha,V):
  if type(T) is not type(V):
    raise Exception('Types of T and V must match')
  if T.tag != V.tag:
    raise Exception('Datatypes of T and V must match')
  if type(T) is Matrix:
    if   T.tag == sTag: lib.ElCholeskyMod_s(uplo,T.obj,alpha,V.obj)
    elif T.tag == dTag: lib.ElCholeskyMod_d(uplo,T.obj,alpha,V.obj)
    elif T.tag == cTag: lib.ElCholeskyMod_c(uplo,T.obj,alpha,V.obj)
    elif T.tag == zTag: lib.ElCholeskyMod_z(uplo,T.obj,alpha,V.obj)
    else: raise Exception('Unsupported datatype')
  elif type(T) is DistMatrix:
    if   T.tag == sTag: lib.ElCholeskyModDist_s(uplo,T.obj,alpha,V.obj)
    elif T.tag == dTag: lib.ElCholeskyModDist_d(uplo,T.obj,alpha,V.obj)
    elif T.tag == cTag: lib.ElCholeskyModDist_c(uplo,T.obj,alpha,V.obj)
    elif T.tag == zTag: lib.ElCholeskyModDist_z(uplo,T.obj,alpha,V.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElHPSDCholesky_s.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholesky_s.restype = c_uint
lib.ElHPSDCholesky_d.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholesky_d.restype = c_uint
lib.ElHPSDCholesky_c.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholesky_c.restype = c_uint
lib.ElHPSDCholesky_z.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholesky_z.restype = c_uint
lib.ElHPSDCholeskyDist_s.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholeskyDist_s.restype = c_uint
lib.ElHPSDCholeskyDist_d.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholeskyDist_d.restype = c_uint
lib.ElHPSDCholeskyDist_c.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholeskyDist_c.restype = c_uint
lib.ElHPSDCholeskyDist_z.argtypes = [c_uint,c_void_p]
lib.ElHPSDCholeskyDist_z.restype = c_uint
def HPSDCholesky(uplo,A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHPSDCholesky_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPSDCholesky_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPSDCholesky_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPSDCholesky_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHPSDCholeskyDist_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPSDCholeskyDist_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPSDCholeskyDist_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPSDCholeskyDist_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElSolveAfterCholesky_s.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholesky_s.restype = c_uint
lib.ElSolveAfterCholesky_d.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholesky_d.restype = c_uint
lib.ElSolveAfterCholesky_c.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholesky_c.restype = c_uint
lib.ElSolveAfterCholesky_z.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholesky_z.restype = c_uint
lib.ElSolveAfterCholeskyDist_s.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyDist_s.restype = c_uint
lib.ElSolveAfterCholeskyDist_d.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyDist_d.restype = c_uint
lib.ElSolveAfterCholeskyDist_c.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyDist_c.restype = c_uint
lib.ElSolveAfterCholeskyDist_z.argtypes = [c_uint,c_uint,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyDist_z.restype = c_uint
lib.ElSolveAfterCholeskyPiv_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPiv_s.restype = c_uint
lib.ElSolveAfterCholeskyPiv_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPiv_d.restype = c_uint
lib.ElSolveAfterCholeskyPiv_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPiv_c.restype = c_uint
lib.ElSolveAfterCholeskyPiv_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPiv_z.restype = c_uint
lib.ElSolveAfterCholeskyPivDist_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPivDist_s.restype = c_uint
lib.ElSolveAfterCholeskyPivDist_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPivDist_d.restype = c_uint
lib.ElSolveAfterCholeskyPivDist_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPivDist_c.restype = c_uint
lib.ElSolveAfterCholeskyPivDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterCholeskyPivDist_z.restype = c_uint

def SolveAfterCholesky(uplo,orient,A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterCholesky_s(uplo,orient,A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterCholesky_d(uplo,orient,A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterCholesky_c(uplo,orient,A.obj,B.obj)
    elif A.tag == zTag: lib.ElSolveAfterCholesky_z(uplo,orient,A.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterCholeskyDist_s(uplo,orient,A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterCholeskyDist_d(uplo,orient,A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterCholeskyDist_c(uplo,orient,A.obj,B.obj)
    elif A.tag == zTag: lib.ElSolveAfterCholeskyDist_z(uplo,orient,A.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

def SolveAfterCholeskyPiv(uplo,orient,A,p,B):
  if type(A) is not type(p) or type(p) is not type(B):
    raise Exception('Types of {A,p,B} must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: 
      lib.ElSolveAfterCholeskyPiv_s(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == dTag: 
      lib.ElSolveAfterCholeskyPiv_d(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == cTag: 
      lib.ElSolveAfterCholeskyPiv_c(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == zTag: 
      lib.ElSolveAfterCholeskyPiv_z(uplo,orient,A.obj,B.obj,p.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElSolveAfterCholeskyPivDist_s(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == dTag: 
      lib.ElSolveAfterCholeskyPivDist_d(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == cTag: 
      lib.ElSolveAfterCholeskyPivDist_c(uplo,orient,A.obj,B.obj,p.obj)
    elif A.tag == zTag: 
      lib.ElSolveAfterCholeskyPivDist_z(uplo,orient,A.obj,B.obj,p.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# LDL
# ===

# Emulate an enum for LDL pivot types
(BUNCH_KAUFMAN_A,BUNCH_KAUFMAN_C,BUNCH_KAUFMAN_D,BUNCH_KAUFMAN_BOUNDED,
 BUNCH_PARLETT,LDL_WITHOUT_PIVOTING)=(0,1,2,3,4,5)

class LDLPivot(ctypes.Structure):
  _fields_ = [("nb",iType),("from",(iType*2))]
